--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -6,14 +6,24 @@
     <td><%= case1.location%></td>
     <td><%= case1.case_type.amount %></td>
     <td><%= case1.status%></td>
-    <td><%= link_to case_path(case1) do%>
-        <%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
-    <% end %><td>
-    <td><%= link_to edit_case_path(case1) do%>
-        <%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %>
-    <%end%></td>
-    <td><%= link_to case1, method: :delete, data: { confirm: 'Are you sure?' } do %>
-        <%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %>
-    <%end%></td>
-    </tr>
+    <% if current_user.is_advocate? %>
+      <td><%=  link_to "Purchase", '#' %></td>
+    <% elsif current_user.is_client? %>
+      <td>
+        <%= link_to case_path(case1) do %>
+          <%= image_tag "detail.png", size: "20x40" ,class: "some class here",alt: "show" %>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to edit_case_path(case1) do%>
+          <%= image_tag "edit.png", size: "20x40" ,class: "some class here",alt: "Edit" %>
+        <%end%>
+      </td>
+      <td>
+        <%= link_to case1, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= image_tag "del.png", size: "20x40" ,class: "some class here",alt: "Edit" %>
+        <%end%>
+      </td>
+    <% end %>
+  </tr>
 <% end %>
