--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,22 +1,32 @@
-<h2>Change your password</h2>
+
+<div class="register-box">
+  <div class="register-logo">
+    <b>Pro</b>ATTORNEY
+  </div>
+
+  <div class="register-box-body">
+    <p class="login-box-msg">Enter Password Details</p>
+    <h3>Change your password</h3>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
+  <div class="form-group has-feedback">
     <%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+    <%= f.password_field :password, class: "form-control" ,autofocus: true, autocomplete: "off" %>
   </div>
 
-  <div class="field">
+  <div class="form-group has-feedback">
     <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, class: "form-control" ,autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
+   <div class="form-group has-feedback">
+    <%= f.submit "Change my password",class: "btn btn-primary btn-block btn-flat" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
