--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -14,18 +14,14 @@
           </div>
 
           <div class = "form-group">
-            <%= f.label :Case_Title %>
+            <%= f.label :Case_Title %><font color="red" class="pull-right">*</font>
             <%= f.text_field :case_title,class: "form-control",placeholder: "Enter Case title" %>
           </div>
 
           <div class = "form-group">
-            <%= f.label :Case_detail %>
+            <%= f.label :Case_detail %><font color="red" class="pull-right">*</font>
             <%= f.text_area :case_detail,class: "form-control",placeholder: "Enter Case detail" %>
           </div>
-             <div class = "form-group">
-            <%= f.label :Budget %>
-            <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
-          </div> 
         </div>
       </div>
 
@@ -44,7 +40,7 @@
         <div class = "col-md-12">
 
           <div class = "form-group">
-            <%= f.label :location %>
+            <%= f.label :location %><font color="red" class="pull-right">*</font>
             <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
           </div> 
   
