--- a/app/views/user_profiles/_form.html.erb
+++ b/app/views/user_profiles/_form.html.erb
@@ -8,13 +8,13 @@
         <div class = "box-body">
           <div class = "col-md-12">
             <div class = "form-group">
-              <%= f.label :first_name %>
-              <%= f.text_field :first_name, class: "form-control ", id: "exampleInputEmail1", placeholder: "Enter first name" %>
+              <%= f.label :first_name%><font color="red" class="pull-right">*</font>
+              <%= f.text_field :first_name, class: "form-control ", id: "exampleInputEmail1", placeholder: "Enter first name"%>
             </div>
 
             <div class = "form-group">
-              <%= f.label :last_name %>
-              <%= f.text_field :last_name, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter last name" %>
+              <%= f.label :last_name %><font color="red" class="pull-right">*</font>  
+              <%= f.text_field :last_name, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter last name"%>
             </div>
 
             <div class = "form-group">
@@ -25,7 +25,7 @@
 
             <div class = "form-group">
               <%= f.label :contact %>
-              <%= f.text_field :mobile_no, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter mobile number" %>
+              <%= f.text_field :mobile_no, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter contact number" ,onkeypress:"return isNumber(event)"%>
             </div>
 
             <div class = "form-group" >
@@ -38,8 +38,8 @@
                 <%= image_tag('default.jpg', height: "85px", width: "85px",id: "output") %><br><br>
                 <% end %> 
                 </div>
-                <%= f.file_field :avatar,onchange: "loadFile(event)",id: "pictureInput" %><p class="help-block">File should be less than 5Mb.</p>
-
+                <%= f.file_field :avatar,onchange: "loadFile(event)",id: "pictureInput" %><p class="help-block">File should be less than 2Mb.</p>
+        
                   <div class="upload-preview">
                     <img />
                   </div>
@@ -58,11 +58,11 @@
         <div class="box-body">
           <div class="col-md-12">
             <div class = "form-group">
-              <%= f.label :address %>
+              <%= f.label :address %><font color="red" class="pull-right">*</font>  
               <%= f.text_area :address, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter address" %>
             </div>
 
-            <div class = "form-group">
+            <div class = "form-group"><font color="red" class="pull-right">*</font>  
               <%= f.label :city %>
               <%= f.text_field :city, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter city" %>
             </div>
@@ -73,7 +73,7 @@
             </div>
             <% if current_user.is_advocate? %>
             <div class = "form-group">
-              <%= f.label :experience %>
+              <%= f.label :experience %><font color="red" class="pull-right">*</font>
               <%= f.text_area :experience, class: "form-control", id: "exampleInputEmail1", placeholder: "Enter experience" %>
             </div>
             <% end %>
@@ -92,4 +92,19 @@
     };
     reader.readAsDataURL(event.target.files[0]);
   };
+
+
+
+
+function isNumber(evt) {
+    evt = (evt) ? evt : window.event;
+    var charCode = (evt.which) ? evt.which : evt.keyCode;
+    if (charCode > 31 && (charCode < 48 || charCode > 57)) {
+        return false;
+    }
+    return true;
+}
+
+
+
 </script>
