--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -41,7 +41,7 @@
 		<br>
 		
 			<% if @user_profile.user.id==current_user.id%>
-			<%= link_to 'Edit',edit_user_profile_path(current_user.id), class: "btn btn-primary" %>
+			<%= link_to 'Edit',edit_user_profile_path(current_user.user_profile.id), class: "btn btn-primary" %>
 			<%end %>
 			  <%= link_to 'Back',:back, class: "btn btn-primary" %>
 			  <br>
