--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -1,31 +1,46 @@
 <% @user_case.each do |user_case| %>
-<div class="row">
-<div class="col-md-1"></div>
-<div class="col-md-10">
 <div class = "box box-primary"><!--start box 2 -->
-        <div class = "box-header with-border ">
-          <h3 class = "box-title custom-header"><%= user_case.case_title.titleize %></h3><br>
+  <div class = "box-header with-border ">
+    <h3 class = "box-title custom-header"><%= user_case.case_title.titleize %></h3>
+    <div class="pull-right">
+      <% if current_user.id == user_case.user_id %>
+      <%= link_to "",case_path(user_case),class: "fa fa-fw fa-eye", title: "view" %>
+      <%= link_to "", edit_case_path(user_case) ,class: "fa fa-fw fa-pencil-square-o", title: "Edit" %>
+      <%= link_to "",user_case, method: :delete, data: { confirm: 'Are you sure?' },class: "fa fa-fw fa-trash", title: "delete" %>
+      <% end %>
+      <%= link_to "<img src='paypal2.png' align='right'>".html_safe,case_cases_path(user_case) if current_user.is_advocate? %>
+    </div><br>
+   </div>
+  <div class="box-body">
+    <div class="row">
+      <div class="col-sm-3">
+        <i class="fa fa-fw fa-location-arrow"></i>
+        <%= user_case.location.titleize%>
+      </div>
+      <div class="col-sm-3">
+        <span class="label label-primary"><%= user_case.case_type.case_type.titleize%></span>
+      </div>
+      <div class="col-sm-3">
+        <i class="fa fa-fw fa-dollar"></i>
+        <%= user_case.case_type.amount %>$
+      </div>
+      <div class="col-sm-3">
+        <% if user_case.status.titleize == "Open"%>
+          <span class="label label-success"><%= user_case.status.titleize%></span>
+        <% else %>
+          <span class="label label-danger"><%= user_case.status.titleize%></span>
+        <% end %>
+      </div>
+    </div>
+    <br>
+    <dt><i class="fa fa-fw fa-file-text-o fa-lg"></i>Details</dt><dd>
+
+      <div><%= user_case.case_detail[0,20] %>
+        <a data-toggle="collapse" data-target="#demo<%= user_case.id %>">read more</a>
+        <div id="demo<%= user_case.id %>" class="collapse">
+          <%= user_case.case_detail%>
         </div>
-   <div class="box-body">
-   <dl class="dl-horizontal">
-   <dt>Location</dt><dd><%= user_case.location.titleize%></dd>
-   <dt>Type</dt><dd><%= user_case.case_type.case_type.titleize%></dd>
-   <dt>Amount</dt><dd><%= user_case.case_type.amount %>$</dd>
-   <dt>Status</dt><dd><%= user_case.status.titleize%></dd>
-   <dt>Details</dt><dd><%= user_case.case_detail %></dd>
-   </dl>
-
-    <% if current_user.id == user_case.user_id %><br>
-    <div class = "pull-right">
-   <%= link_to "",case_path(user_case),class: "fa fa-fw fa-eye", title: "view" %>
-    <%= link_to "", edit_case_path(user_case) ,class: "fa fa-fw fa-pencil-square-o", title: "Edit" %>
-    <%= link_to "",user_case, method: :delete, data: { confirm: 'Are you sure?' },class: "fa fa-fw fa-trash", title: "delete" %>
-	 <% end %>
-   <%= link_to "<img src='paypal2.png' align='right'>".html_safe,case_cases_path(user_case) if current_user.is_advocate? %>
-   
-</div>
-</div>
-</div>
-</div>
+      </div>
+  </div>
+</div><br>
 <% end %>
-
